# crypto-score

./: .gitignore  data.csv  docker-compose.yaml  package.json  pnpm-lock.yaml  readme.md
node/: package.json  pnpm-lock.yaml
node/app/: app.js
node/test/: app.spec.js
python/: alembic.ini  pyproject.toml
python/migration/: env.py
python/migration/versions/: 2023_03_07_2214-621d23487f83_add_reputation_score.py
python/src/: app.py  model.py
python/tests/: test_read_csv.py  test_save.py
